Links to tables no longer start with 0. Exercises with a blank label (Check Your Understanding) no longer get a default label. Subsection headings are now smaller. End-of-chapter exercises now have some vertical spacing

--- a/Products/RhaptosPrint/epub/css/ccap-base.less
+++ b/Products/RhaptosPrint/epub/css/ccap-base.less
@@ -51,7 +51,7 @@ sup a {
 body {
   font-size: 8.2pt;
   font-family: Liberation Sans, sans-serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
-  prince-jpeg-quality: 20%;
+  //prince-jpeg-quality: 20%;
 }
 
 a[href^="http"] {
