--- a/Products/RhaptosPrint/epub/css/ccap-numbering.less
+++ b/Products/RhaptosPrint/epub/css/ccap-numbering.less
@@ -76,7 +76,7 @@ div.book {
   }
   & > div.section  { .x-increment(section); }   // Only increment top-level sections
   & > div.section div.figure       { .x-increment(figure); }
-  & > div.section table            { .x-increment(table); }
+  & > div.section .table           { .x-increment(table); }
   & > div.section div.example      { .x-increment(example); }
   & > div.cnx-eoc div.exercise,
   & > div.section div.exercise     { .x-increment(exercise); }
@@ -127,20 +127,20 @@ div.book {
   & > div.section div.figure > div.title > span.cnx-gentext-autogenerated,
   & > div.section div.figure > div.title > span.cnx-gentext-n  { display: none; }
   
-  & > div.section div.table > table > caption     { .x-test-text (@table, table); }
+  & > div.section div.table:not(.labeled) > table > caption     { .x-test-text (@table, table); }
   & > div.section div.table > table > caption > span.cnx-gentext-t,
   & > div.section div.table > table > caption > span.cnx-gentext-n { display: none; }
   
-  & > div.section div.example > .title > span     { .x-test-text (@example, example, "."); }
+  & > div.section div.example:not(.labeled) > .title > span     { .x-test-text (@example, example, "."); }
   & > div.section div.example > .title > span > span.cnx-gentext-autogenerated,
   & > div.section div.example > .title > span > span.cnx-gentext-n { display: none; }
   
-  & > div.section div.exercise > .title > span:first-child    { &:before { content: @S @exercise counter(exercise) "." @E; } }
+  & > div.section div.exercise:not(.labeled) > .title > span:first-child    { .x-test-text (@exercise, exercise, "."); }
   & > div.section div.exercise > .title > span:first-child .cnx-gentext-autogenerated,
   & > div.section div.exercise > .title > span:first-child .cnx-gentext-n { display: none; }
 
-  & > div.cnx-eoc > div.section > div.body > div.exercise > div.body > div.problem:before { content: @S counter(exercise) "." @E; font-weight: bold; }
-  & > div.cnx-eoc > div.section > div.body > div.exercise > div.title { display: none; }
+  & > div.cnx-eoc > div.section > div.body > div.exercise:not(.labeled) > div.body > div.problem:before { content: @S counter(exercise) "." @E; font-weight: bold; }
+  & > div.cnx-eoc > div.section > div.body > div.exercise:not(.labeled) > div.title { display: none; }
   
   & > div.section div.equation > *:last-child::after { content: @S "(" @part-counter @part-separator counter(equation) ")" @E; float: right; }
   & > div.section div.equation > .label           { display: none; }
