--- a/Products/RhaptosPrint/epub/css/ccap-physics.less
+++ b/Products/RhaptosPrint/epub/css/ccap-physics.less
@@ -384,7 +384,7 @@ h2:before {
 ol, ul {
   margin-left: 20pt;
 }
-h2, h3 {
+h2, h3, h4 {
   margin: 1em 0em 0em 0em;
 }
 h2 {
@@ -393,6 +393,9 @@ h2 {
 h3 {
   font-size: 1.17em;
   font-weight: normal;
+}
+h4, h5, h6 {
+  font-size: 1em;
 }
 .table table {
   margin: 1.5em auto;
@@ -469,8 +472,8 @@ h3 {
 	border-bottom: 1px solid @orange;
 }
 .cnx-eoc .exercise {
-	margin-bottom: 0.05em;
-	margin-top: 0.05em;
+  margin-top: 0.5em;
+  margin-bottom: 0.0em;
 }
 .cnx-gentext-exercise.cnx-gentext-n {
 	font-weight: bold;
